--- a/assets/css/destaques.css
+++ b/assets/css/destaques.css
@@ -12,6 +12,36 @@
     height: calc(100vh - 50px);
 }
 
+.destaques__principal {
+    background-image: url('../img/fortnite.jpg') center / cover no-repeat;
+    grid-column: 1/4;
+    grid-row: 1/3;
+}
+
+.destaques__secundario::nth-child(2) {
+    background-image: url('../img/pubg.jpg')center / cover no-repeat;
+    grid-column: 4/4;
+    grid-row: 1/1;
+}
+
+.destaques__secundario:nth-child(3) {
+    background-image: url('../img/slack.png') center/ cover no-repeat;
+    grid-column: 4/4;
+    grid-row: 2/2;
+}
+
+.destaques__secundario:nth-child(4) {
+    background-image: url('../img/whatsapp.png') center/ cover no-repeat;
+    grid-column: 4/4;
+    grid-row: 3/3;
+}
+
+.destaques__secundario:nth-child(5) {
+    background-image: url('../img/cs-go.jpg') center/ cover no-repeat;
+    grid-column: 3/3;
+    grid-row: 3/3;
+}
+
 .destaques__titulo {
     background: rgba(0, 0, 0, .5);
     color: #fdfdfd;
@@ -20,28 +50,8 @@
     width: 100%;
 }
 
-.destaques__principal {
-    background: url('../img/fortnite.jpg') center / cover no-repeat;
-    grid-row: 1 / 3;
-}
-
-.destaques__secundario:nth-child(2) {
-    background: url('../img/pubg.jpg') center / cover no-repeat;
-}
-
-.destaques__secundario:nth-child(3) {
-    background: url('../img/slack.png') center / cover no-repeat;
-}
-
-.destaques__secundario:nth-child(4) {
-    background: url('../img/whatsapp.png') center / cover no-repeat;
-}
-
-.destaques__secundario:nth-child(5) {
-    background: url('../img/cs-go.jpg') center / cover no-repeat;
-}
-
 .destaques__categorias {
+    grid-column: 1/3;
     grid-row: 3 / 3;
 }
 
@@ -49,7 +59,7 @@
     display: flex;
     flex-wrap: wrap;
     height: 100%;
-    justify-content: space-between; 
+    justify-content: space-between;
 }
 
 .destaques__categorias___item {
