ajustes das aulas de grid

--- a/assets/css/destaques.css
+++ b/assets/css/destaques.css
@@ -11,9 +11,17 @@
     grid-template-rows: 33.33% 33.33% 33.33%;
     height: calc(100vh - 50px);
 }
+.destaques__titulo{
+    background: rgba(0, 0, 0, .5);
+    color: #fdfdfd;
+    padding: .6rem;
+    text-align: center;
+    width: 100%;
+
+}
 
 .destaques__principal {
-    background-image: url('../img/fortnite.jpg') center / cover no-repeat;
+    background-image: url('../img/fortnite.jpg') center  cover no-repeat;
     grid-column: 1/4;
     grid-row: 1/3;
 }
