--- a/assets/css/populares.css
+++ b/assets/css/populares.css
@@ -1,26 +1,14 @@
 .populares {
-    padding: 3rem 0;
-}
-
-.populares__conteudo {
-    display: flex;
-    flex-wrap: wrap;
-    padding: 1rem 0rem;
+    padding: 3rem 2rem;
 }
 
 .populares__card {
     background: #fdfdfd;
     display: grid;
-    grid-template-areas: 
-        "card-imagem"
-        "card-corpo";
+    grid-template-areas: "card-imagem", "card-corpo";
     grid-template-columns: 100%;
 }
 
-.populares__card:last-child { 
-    margin-right: 0;
-}
- 
 .populares__card___imagem {
     grid-area: card-imagem;
     height: 100%;
@@ -31,11 +19,29 @@
     display: grid;
     grid-area: card-corpo;
     grid-row-gap: .5rem;
-    grid-template-areas: 
-        "card-cabecalho"
-        "card-conteudo";
+    grid-template-areas: "card-cabecalho" "card-conteudo";
     grid-template-rows: 50px auto;
     padding: .75rem;
+}
+
+.populares__conteudo {
+    display: flex;
+    flex-wrap: wrap;
+    grid-area: conteudo;
+    padding: 1rem 0rem;
+}
+
+.populares__card:last-child {
+    margin-right: 0;
+}
+
+.populares__card {
+    background: #fdfdfd;
+    display: grid;
+    grid-template-areas: "card-imagem" "card-corpo";
+    grid-template-columns: 100%;
+    margin-right: 1rem;
+    width: calc(20% - 1rem);
 }
 
 .populares__card___titulo {
